# findu.dev

./: .env  .env-example  .gitignore  Cargo.toml  README.md
assets/: base.css  base.html  site.css
migrations/: 0001_page_view.sql  20241121234447_users.up.sql  sqlfile.sql
public/: 404.html  contact.html  error.html  index.html  index_old.html  login.html  login_success.html  package-lock.json  package.json  projects.html  register.html  register_success.html  tailwind.config.js
public/styles/: background.css  output.css
public/user/: change_name.html  change_password.html  me.html  users.html
src/: config.rs  db.rs  dtos.rs  error.rs  main.rs  middleware.rs  models.rs  routers.rs  routes.rs
src/handler/: auth.rs  public.rs  users.rs
src/utils/: password.rs  token.rs
templates/: base.html  index.html  navbar.html  site.html
tests/: response.rs
