[package]
name = "findu_dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"]}
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio-rustls"]}
chrono = "0.4.31"
axum = "0.6.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[dev-dependencies]
reqwest = "0.11.22"
