[package]
name = "findudotdev"
version = "0.2.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.83"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "10.3.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
validator = { version = "0.19.0", features = ["derive"] }
axum = "0.7.9"
axum-extra = { version = "0.9.6", features = ["cookie"]}
tokio = { version = "1.43.1", features = ["full"] }
tower = "0.5.1"
time = "0.3.36"
tower-http = { version = "0.6.2", features = ["full"] }
tracing-subscriber = { version = "0.3.20"}
minijinja = {version = "2.5.0", features = ["loader"]}
axum-server = {version= "0.7.1", features = ['tls-rustls']}
